plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.11'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.pallav'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// Core JWT support
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'

	// Runtime dependencies for signing and JSON serialization
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
test {
	jvmArgs '-XX:+EnableDynamicAgentLoading'
}

tasks.named('test') {
	useJUnitPlatform()
}
